--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@gsap/react": "^2.1.1",
     "@studio-freight/react-lenis": "^0.0.47",
+    "axios": "^1.7.7",
     "gsap": "^3.12.5",
     "next": "14.2.5",
+    "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.77.8"
